cabal-version: 3.4

name:                   cardano-cli
version:                8.1.1
synopsis:               The Cardano command-line interface
description:            The Cardano command-line interface.
copyright:              2020-2023 Input Output Global Inc (IOG).
author:                 IOHK
maintainer:             operations@iohk.io
category:               Cardano,
                        CLI,
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:          Turn on unexpected thunks checks
  Default:              False

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
  build-depends:        base >= 4.14 && < 4.17

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:     unix

common maybe-bytestring
  if !os(windows)
     build-depends:     bytestring

library
  import:               project-config

  if flag(unexpected_thunks)
    cpp-options:        -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.CLI.Environment
                        Cardano.CLI.Helpers
                        Cardano.CLI.Parsers
                        Cardano.CLI.Render
                        Cardano.CLI.Run
                        Cardano.CLI.Run.Friendly
                        Cardano.CLI.Types

                        Cardano.CLI.Byron.Commands
                        Cardano.CLI.Byron.Parsers
                        Cardano.CLI.Byron.Run
                        Cardano.CLI.Byron.Delegation
                        Cardano.CLI.Byron.Genesis
                        Cardano.CLI.Byron.Key
                        Cardano.CLI.Byron.Legacy
                        Cardano.CLI.Byron.Tx
                        Cardano.CLI.Byron.Query
                        Cardano.CLI.Byron.UpdateProposal
                        Cardano.CLI.Byron.Vote

                        Cardano.CLI.Common.Parsers
                        Cardano.CLI.Pretty
                        Cardano.CLI.IO.Lazy

                        Cardano.CLI.Shelley.Commands
                        Cardano.CLI.Shelley.Key
                        Cardano.CLI.Shelley.Orphans
                        Cardano.CLI.Shelley.Output
                        Cardano.CLI.Shelley.Parsers
                        Cardano.CLI.Shelley.Run
                        Cardano.CLI.Shelley.Run.Address
                        Cardano.CLI.Shelley.Run.Address.Info
                        Cardano.CLI.Shelley.Run.Genesis
                        Cardano.CLI.Shelley.Run.Governance
                        Cardano.CLI.Shelley.Run.Key
                        Cardano.CLI.Shelley.Run.Node
                        Cardano.CLI.Shelley.Run.Pool
                        Cardano.CLI.Shelley.Run.Query
                        Cardano.CLI.Shelley.Run.StakeAddress
                        Cardano.CLI.Shelley.Run.TextView
                        Cardano.CLI.Shelley.Run.Transaction
                        Cardano.CLI.Shelley.Run.Read
                        Cardano.CLI.Shelley.Run.Validate

                        Cardano.CLI.Ping

                        Cardano.CLI.TopHandler

  other-modules:        Paths_cardano_cli
  autogen-modules:      Paths_cardano_cli

  build-depends:        aeson             >= 1.5.6.0
                      , aeson-pretty      >= 0.8.5
                      , ansi-terminal
                      , attoparsec
                      , base16-bytestring >= 1.0
                      , bech32            >= 1.1.0
                      , binary
                      , bytestring
                      , canonical-json
                      , cardano-api ^>= 8.2
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-class >= 2.1.1
                      , cardano-crypto-wrapper ^>= 1.5
                      , cardano-data >= 1.0
                      , cardano-git-rev
                      , cardano-ledger-alonzo >= 1.1.1
                      , cardano-ledger-byron >= 1.0
                      , cardano-ledger-binary >= 1.0
                      , cardano-ledger-core >= 1.2
                      , cardano-ledger-conway >= 1.1
                      , cardano-ledger-shelley >= 1.1.1
                      , cardano-ping ^>= 0.1.0.1
                      , cardano-prelude
                      , cardano-protocol-tpraos >= 1.0
                      , cardano-slotting ^>= 0.1
                      , cardano-strict-containers ^>= 0.1
                      , cborg >= 0.2.4 && < 0.3
                      , containers
                      , contra-tracer
                      , cryptonite
                      , deepseq
                      , directory
                      , filepath
                      , formatting
                      , io-classes
                      , iproute
                      , mtl
                      , microlens
                      , network
                      , optparse-applicative-fork
                      , ouroboros-consensus >= 0.7
                      , ouroboros-consensus-cardano >= 0.6
                      , ouroboros-consensus-protocol >= 0.5
                      , ouroboros-network-api
                      , ouroboros-network-protocols
                      , parsec
                      , prettyprinter
                      , prettyprinter-ansi-terminal
                      , random
                      , split
                      , strict-stm
                      , text
                      , time
                      , transformers
                      , transformers-except ^>= 0.1.3
                      , unliftio-core
                      , utf8-string
                      , vector
                      , yaml

executable cardano-cli
  import:               project-config
                      , maybe-unix
  hs-source-dirs:       app
  main-is:              cardano-cli.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-cli
                      , cardano-crypto-class ^>= 2.1
                      , optparse-applicative-fork
                      , transformers-except

library cardano-cli-test-lib
  import:               project-config
  visibility:           public
  hs-source-dirs:       test/cardano-cli-test-lib
  exposed-modules:      Test.Cardano.CLI.Util
  build-depends:        cardano-api
                      , cardano-cli
                      , exceptions
                      , hedgehog
                      , hedgehog-extras ^>= 0.4.5.1
                      , process
                      , transformers

test-suite cardano-cli-test
  import:               project-config, maybe-unix

  hs-source-dirs:       test/cardano-cli-test
  main-is:              cardano-cli-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , base16-bytestring
                      , bech32 >= 1.1.0
                      , bytestring
                      , cardano-api ^>= 8.2
                      , cardano-api-gen ^>= 8.1.0.2
                      , cardano-cli
                      , cardano-cli:cardano-cli-test-lib
                      , cardano-crypto-class ^>= 2.1
                      , cardano-node
                      , cardano-slotting ^>= 0.1
                      , containers
                      , filepath
                      , hedgehog
                      , hedgehog-extras ^>= 0.4.5.1
                      , parsec
                      , text
                      , time
                      , transformers

  other-modules:        Test.Cli.CliIntermediateFormat
                        Test.Cli.FilePermissions
                        Test.Cli.ITN
                        Test.Cli.JSON
                        Test.Cli.MultiAssetParsing
                        Test.Cli.Pioneers.Exercise1
                        Test.Cli.Pioneers.Exercise2
                        Test.Cli.Pioneers.Exercise3
                        Test.Cli.Pioneers.Exercise4
                        Test.Cli.Pioneers.Exercise5
                        Test.Cli.Pioneers.Exercise6
                        Test.Cli.Pipes
                        Test.Cli.Shelley.Run.Query

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

test-suite cardano-cli-golden
  import:               project-config

  hs-source-dirs:       test/cardano-cli-golden
  main-is:              cardano-cli-golden.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson >= 1.5.6.0
                      , base16-bytestring
                      , bytestring
                      , cardano-api ^>= 8.2
                      , cardano-cli
                      , cardano-cli:cardano-cli-test-lib
                      , cardano-crypto-class ^>= 2.1
                      , cardano-crypto-wrapper ^>= 1.5.1
                      , cardano-ledger-byron ^>= 1.0
                      , cborg
                      , containers
                      , filepath
                      , hedgehog ^>= 1.2
                      , hedgehog-extras ^>= 0.4.5.1
                      , regex-compat
                      , regex-tdfa
                      , text
                      , time
                      , transformers
                      , unordered-containers
  build-tool-depends:   cardano-cli:cardano-cli

  other-modules:        Test.Golden.Byron.SigningKeys
                        Test.Golden.Byron.Tx
                        Test.Golden.Byron.TxBody
                        Test.Golden.Byron.UpdateProposal
                        Test.Golden.Byron.Vote
                        Test.Golden.Byron.Witness
                        Test.Golden.Help
                        Test.Golden.Key
                        Test.Golden.Key.NonExtendedKey
                        Test.Golden.Shelley
                        Test.Golden.Shelley.Address.Build
                        Test.Golden.Shelley.Address.Info
                        Test.Golden.Shelley.Address.KeyGen
                        Test.Golden.Shelley.Genesis.Create
                        Test.Golden.Shelley.Genesis.InitialTxIn
                        Test.Golden.Shelley.Genesis.KeyGenDelegate
                        Test.Golden.Shelley.Genesis.KeyGenGenesis
                        Test.Golden.Shelley.Genesis.KeyGenUtxo
                        Test.Golden.Shelley.Genesis.KeyHash
                        Test.Golden.Shelley.Governance.AnswerPoll
                        Test.Golden.Shelley.Governance.CreatePoll
                        Test.Golden.Shelley.Governance.VerifyPoll
                        Test.Golden.Shelley.Key.ConvertCardanoAddressKey
                        Test.Golden.Shelley.Metadata.StakePoolMetadata
                        Test.Golden.Shelley.MultiSig.Address
                        Test.Golden.Shelley.Node.IssueOpCert
                        Test.Golden.Shelley.Node.KeyGen
                        Test.Golden.Shelley.Node.KeyGenKes
                        Test.Golden.Shelley.Node.KeyGenVrf
                        Test.Golden.Shelley.StakeAddress.Build
                        Test.Golden.Shelley.StakeAddress.DeregistrationCertificate
                        Test.Golden.Shelley.StakeAddress.KeyGen
                        Test.Golden.Shelley.StakeAddress.RegistrationCertificate
                        Test.Golden.Shelley.StakePool.RegistrationCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.GenesisKeyDelegationCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.MIRCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.OperationalCertificate
                        Test.Golden.Shelley.TextEnvelope.Certificates.StakeAddressCertificates
                        Test.Golden.Shelley.TextEnvelope.Certificates.StakePoolCertificates
                        Test.Golden.Shelley.TextEnvelope.Keys.ExtendedPaymentKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisDelegateKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.GenesisUTxOKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.KESKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.PaymentKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.StakeKeys
                        Test.Golden.Shelley.TextEnvelope.Keys.VRFKeys
                        Test.Golden.Shelley.TextEnvelope.Tx.Tx
                        Test.Golden.Shelley.TextEnvelope.Tx.TxBody
                        Test.Golden.Shelley.TextEnvelope.Tx.Witness
                        Test.Golden.Shelley.TextView.DecodeCbor
                        Test.Golden.Shelley.Transaction.Assemble
                        Test.Golden.Shelley.Transaction.Build
                        Test.Golden.Shelley.Transaction.CalculateMinFee
                        Test.Golden.Shelley.Transaction.CreateWitness
                        Test.Golden.Shelley.Transaction.Sign
                        Test.Golden.TxView
                        Test.Golden.Version

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
