cabal-version:       2.4
name:                cardano-client-demo
version:             0.1.0.0
synopsis:            A simple demo cardano-node client application
description:         This is intended to demonstrate how to write simple
                     applications that interact with the cardano-node,
                     using the cardano-api.
license:             Apache-2.0
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
license-files:
  LICENSE
  NOTICE
extra-source-files:  CHANGELOG.md

executable scan-blocks
  main-is:             ScanBlocks.hs
  other-modules:
  build-depends:        base              >= 4.12       &&  < 5
                      , cardano-api
                      , filepath
                      , time
  default-language:    Haskell2010

executable scan-blocks-pipelined
  main-is:             ScanBlocksPipelined.hs
  other-modules:
  build-depends:       base,
                       cardano-api,
                       cardano-ledger-byron,
                       cardano-slotting,
                       filepath,
                       time,
  default-language:    Haskell2010
