cabal-version: 3.0

name:                   cardano-client-demo
version:                0.1.0.0
synopsis:               A simple demo cardano-node client application
description:            This is intended to demonstrate how to write simple
                        applications that interact with the cardano-node,
                        using the cardano-api.
category:               Cardano,
                        Demo,
copyright:              2023 Input Output (Hong Kong) Ltd.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
extra-source-files:     CHANGELOG.md

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 4.17

executable scan-blocks
  import:               project-config
  main-is:              ScanBlocks.hs
  build-depends:        cardano-api
                      , filepath
                      , time

executable scan-blocks-pipelined
  import:               project-config
  main-is:              ScanBlocksPipelined.hs
  build-depends:        cardano-api
                      , cardano-ledger-byron ^>= 0.1
                      , cardano-slotting ^>= 0.1
                      , filepath
                      , time

executable chain-sync-client-with-ledger-state
  import:               project-config
  main-is:              ChainSyncClientWithLedgerState.hs
  build-depends:        cardano-api
                      , cardano-ledger-byron ^>= 0.1
                      , cardano-slotting ^>= 0.1
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano

                      , filepath
                      , sop-core
                      , text
                      , time
                      , transformers

executable ledger-state
  import:               project-config
  main-is:              LedgerState.hs
  build-depends:        aeson,
                        base16-bytestring,
                        bytestring,
                        containers,
                        filepath,
                        memory,
                        mtl,
                        text,
                        time,
                        transformers,
                        transformers-except,
                        yaml,

                        cryptonite,
                        cardano-api,
                        cardano-binary,
                        cardano-crypto-class,
                        cardano-crypto-wrapper,
                        cardano-ledger-byron,
                        cardano-node,
                        cardano-slotting,
                        iohk-monitoring,
                        ouroboros-network,
                        ouroboros-consensus,
                        ouroboros-consensus-cardano,
                        ouroboros-consensus-byron,
                        ouroboros-consensus-shelley,
                        cardano-ledger-shelley,
                        typed-protocols,

executable stake-credential-history
  import:               project-config
  main-is:              StakeCredentialHistory.hs
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
  build-depends:        base16-bytestring,
                        binary,
                        bech32,
                        bytestring,
                        cardano-ledger-alonzo,
                        cardano-api,
                        cardano-data,
                        cardano-ledger-core,
                        cardano-ledger-shelley,
                        vector-map,
                        containers,
                        optparse-applicative,
                        ouroboros-consensus-shelley,
                        text,
                        transformers,
