name:                  cardano-config
version:               0.1.0.0
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

flag systemd
  description: Enable systemd support
  default:     True
  manual:      False

library
  hs-source-dirs:      src

  if os(linux) && flag(systemd)
    cpp-options:       -DSYSTEMD
    build-depends:     lobemo-scribe-systemd

  exposed-modules:     Cardano.Config.Byron.Parsers
                       Cardano.Config.GitRev
                       Cardano.Config.GitRevFromGit
                       Cardano.Config.Logging
                       Cardano.Config.Orphanage
                       Cardano.Config.Parsers
                       Cardano.Config.Shelley.Address
                       Cardano.Config.Shelley.ColdKeys
                       Cardano.Config.Shelley.Genesis
                       Cardano.Config.Shelley.KES
                       Cardano.Config.Shelley.OCert
                       Cardano.Config.Shelley.Orphans
                       Cardano.Config.Shelley.Parsers
                       Cardano.Config.Shelley.VRF
                       Cardano.Config.TextView
                       Cardano.Config.Topology
                       Cardano.Config.TopHandler
                       Cardano.Config.TraceConfig
                       Cardano.Config.Types
                       Cardano.TracingOrphanInstances.Byron
                       Cardano.TracingOrphanInstances.Common
                       Cardano.TracingOrphanInstances.Consensus
                       Cardano.TracingOrphanInstances.HardFork
                       Cardano.TracingOrphanInstances.Mock
                       Cardano.TracingOrphanInstances.Network
                       Cardano.TracingOrphanInstances.Shelley

  build-depends:       base >=4.12 && <5
                     , attoparsec
                     , aeson
                     , async
                     , base16-bytestring
                     , bytestring
                     , canonical-json >= 0.6 && < 0.7
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-prelude
                     , cardano-shell
                     , cardano-slotting
                     , cborg
                     , containers
                     , contra-tracer
                     , cryptonite
                     , directory
                     , file-embed
                     , filepath
                     , generic-monoid
                     , iohk-monitoring
                     , lobemo-backend-aggregation
                     , lobemo-backend-ekg
                     , lobemo-backend-monitoring
                     , lobemo-backend-trace-forwarder
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-mock
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , ouroboros-network-framework
                     , process
                     , iproute
                     , safe-exceptions
                     , scientific
                     , shelley-spec-ledger
                     , string-conv
                     , stm
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , transformers-except
                     , typed-protocols
                     , unordered-containers
                     , yaml

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:       -Wall
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Wcompat

test-suite cardano-config-test
  hs-source-dirs:       test
  main-is:              cardano-config-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:
                        base >= 4.12 && < 5
                      , aeson
                      , bytestring
                      , cardano-config
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-crypto-wrapper
                      , cardano-prelude
                      , cardano-prelude-test
                      , cardano-slotting
                      , containers
                      , cryptonite
                      , iproute
                      , ouroboros-consensus
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , shelley-spec-ledger
                      , shelley-spec-ledger-test
                      , time
                      , hedgehog
                      , hedgehog-corpus

  other-modules:        Test.Cardano.Config.Examples
                        Test.Cardano.Config.Gen
                        Test.Cardano.Config.Json
                        Test.Cardano.Config.Types
                        Test.Cardano.Config.TextView

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
