name:                  cardano-config
version:               0.1.0.0
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

flag systemd
  description: Enable systemd support
  default:     True
  manual:      False

library
  hs-source-dirs:      src

  if os(linux) && flag(systemd)
    cpp-options:       -DSYSTEMD
    build-depends:     lobemo-scribe-systemd

  exposed-modules:     Cardano.Config.Git.Rev
                       Cardano.Config.Git.RevFromGit
                       Cardano.Config.Types

  build-depends:       base >=4.12 && <5
                     , attoparsec
                     , aeson
                     , async
                     , base16-bytestring
                     , bytestring
                     , canonical-json >= 0.6 && < 0.7
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-prelude
                     , cardano-slotting
                     , cborg
                     , containers
                     , contra-tracer
                     , cryptonite
                     , directory
                     , file-embed
                     , filepath
                     , iohk-monitoring
                     , lobemo-backend-aggregation
                     , lobemo-backend-ekg
                     , lobemo-backend-monitoring
                     , lobemo-backend-trace-forwarder
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-mock
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , ouroboros-network-framework
                     , process
                     , iproute
                     , scientific
                     , shelley-spec-ledger
                     , string-conv
                     , stm
                     , template-haskell
                     , text
                     , transformers
                     , transformers-except
                     , typed-protocols
                     , unordered-containers

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:       -Wall
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Wcompat
