cabal-version: 2.4

name:                  cardano-config
version:               0.1.0.0
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
extra-source-files:    README.md

flag systemd
  description: Enable systemd support
  default:     True
  manual:      False

library
  hs-source-dirs:       src

  if os(linux) && flag(systemd)
    cpp-options:        -DSYSTEMD
    build-depends:      lobemo-scribe-systemd

  exposed-modules:      Cardano.Config.Git.Rev
                        Cardano.Config.Git.RevFromGit

  build-depends:        base >=4.12 && <5
                      , cardano-prelude
                      , file-embed                      >= 0.0.13.0
                      , process                         >= 1.6.9.0
                      , template-haskell                >= 2.14.0.0
                      , text                            >= 1.2.3.2

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:       -Wall
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Wcompat
