cabal-version: 3.0
name:          cardano-debug
version:       0.1.0.0
synopsis:      Headless ghc-debug heap snapshotter + offline analyzer for cardano-node debug images
description:   A tiny ghc-debug tool for cardano-node debug images. The
               @snapshot@ subcommand connects to a running,
               ghc-debug-instrumented process over its GHC_DEBUG_SOCKET unix
               socket, pauses it, writes a self-contained heap snapshot to a
               file, and exits. The remaining subcommands (@census@, @retain@,
               @threads@) analyse such a snapshot offline (no live process)
               with GHC.Debug.Snapshot.snapshotRun.
license:       Apache-2.0
author:        IOG
maintainer:    operations@iohk.io
build-type:    Simple

executable cardano-debug
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -Wall
  build-depends:      base
                    , ghc-debug-client
                    , containers
                    , bytestring
                    , text
