cabal-version: 3.0

name:                   cardano-git-rev
version:                0.1.0.0
synopsis:               Git revisioning
description:            Embeds git revision into Haskell packages.
category:               Cardano,
                        Versioning,
copyright:              2023 Input Output (Hong Kong) Ltd.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  build-depends:        base >= 4.14 && < 4.17

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               project-config

  hs-source-dirs:       src

  exposed-modules:      Cardano.Git.Rev
                        Cardano.Git.RevFromGit

  build-depends:        cardano-prelude
                      , file-embed
                      , process
                      , template-haskell
                      , text
