cabal-version: 3.0

name:                   cardano-node-capi
version:                0.1.0.0
description:            ffi c library around the full node
category:               Cardano,
                        FFI,
copyright:              2023 Input Output (Hong Kong) Ltd.
author:                 IOHK
maintainer:             operations@iohk.io
license-files:          LICENSE
                        NOTICE

extra-source-files:     CHANGELOG.md

common project-config
  default-language:     Haskell2010

library
  import:               project-config
  exposed-modules:      Node
  build-depends:        base
                      , aeson                         >= 2.1.0.0
                      , bytestring
                      , cardano-node
                      , optparse-applicative-fork
  hs-source-dirs:       src
